--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
